src/objects/Pos__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Is_Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>firstname__c</fullName>
        <label>firstname</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>units__c</fullName>
        <label>units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>valid</label>
        <type>Checkbox</type>
    </fields>
    <label>testing</label>
</CustomObject>